<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">View on Map</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_key">location_setting</string>
    <string name="pref_location"> Current Location</string>
    <string name="pref_location_default"> 94043</string>
    <string name="pref_unit"> Temperature Units</string>
    <string name="pref_unit_key">unit_preference</string>
    <string name="pref_unit_chooser"> Choose units</string>
    <string-array name="pref_unit_array">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_unit_array_value">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string name="pref_unit_default">Metric</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator)-->
    <!-- SyncAdapter related-->

    <string name="sync_account_type">sunshine.sr.com</string>
    <string name="content_authority">com.sr.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <string name="pref_notify_key">notification_setting</string>
    <string name="pref_notify_title">Daily Weather Notification</string>

</resources>